# MIPT-networked

./: .gitmodules  README.md
w1/: .gitignore  CMakeLists.txt  client.cpp  protocol.h  server.cpp
w2/: CMakeLists.txt  client.cpp  game.cpp  lobby.cpp
w4/: CMakeLists.txt  bitstream.h  entity.h  main.cpp  protocol.cpp  protocol.h  server.cpp
w5/: CMakeLists.txt  bitstream.h  entity.cpp  entity.h  main.cpp  protocol.cpp  protocol.h  server.cpp  time.h
w7/: CMakeLists.txt  bitstream.h  entity.cpp  entity.h  main.cpp  mathUtils.h  protocol.cpp  quantisation.h  server.cpp
